add product controller cached

--- a/admin/src/main/webapp/product-upload.html
+++ b/admin/src/main/webapp/product-upload.html
@@ -159,6 +159,7 @@
                 }, 1000);
             },
             error : function(xhr, status, error) {
+                alert("add product fail")
                 console.log("error: " + error + ", status: " + status);
             }
         });
