--- a/admin/src/main/webapp/product.html
+++ b/admin/src/main/webapp/product.html
@@ -181,6 +181,12 @@
         });
     }
 
+    function getTargetElement(e) {
+        e = e || window.event;
+        return e.target || e.srcElement;
+
+    }
+
 </script>
 
 
