--- a/admin/src/main/resources/webapp/product.html
+++ b/admin/src/main/resources/webapp/product.html
@@ -113,10 +113,8 @@
             }
 
             let img = "<img height=80 width=100  src="+
-                "https://s3-ap-northeast-1.amazonaws.com/cens-s3website-2fkuo2z3mpnh"
-                + products[i].smallImage +
-                " href=https://s3-ap-northeast-1.amazonaws.com/cens-s3website-2fkuo2z3mpnh" +
-                + products[i].smallImage +">";
+                bucketEndPoint
+                + products[i].smallImage + ">";
 
             let product =
             "<tr> " +
