--- a/application/src/test/webapp/index.html
+++ b/application/src/test/webapp/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.162.0.min.js"></script>
-    <script src="./app.js"></script>
-
 
 
 </head>
 <body>
 <h1>My Photo Albums App</h1>
 <div id="app"></div>
-<img src="https://s3-ap-northeast-1.amazonaws.com/product.hwangying.com/test.png"/>
+<div id="app2"></div>
 </body>
 </html>
+
+
+<script>
+    document.getElementById("app").innerHTML = alert(1)
+    document.getElementById("app2").innerHTML = 'alert(1)';
+</script>
