--- a/admin/src/main/resources/webapp/product.html
+++ b/admin/src/main/resources/webapp/product.html
@@ -47,7 +47,7 @@
         <main role="main">
             <h1>Dashboard</h1>
 
-            <h2 id="sectionTitle">所有商品</h2>
+            <h2 id="sectionTitle">商品</h2>
 
             <div class="table-responsive">
                 <table class="table table-striped">
