--- a/admin/src/main/resources/webapp/product-upload.html
+++ b/admin/src/main/resources/webapp/product-upload.html
@@ -38,6 +38,8 @@
         <div></div>
         <input id="introduction" placeholder="introduction">
         <div></div>
+        <input id="priority" placeholder="priority">
+        <div></div>
         <input id="tag" placeholder="tag">
         <div></div>
     </nav>
@@ -139,6 +141,7 @@
             originalPrice: document.getElementById("originalPrice").value,
             introduction: document.getElementById("introduction").value,
             details: details.getHTML(),
+            priority: document.getElementById("priority").value,
             tag: document.getElementById("tag").value,
             smallImage: smallImageName,
             smallImages: smallImagesName
