--- a/admin/src/main/resources/webapp/product-upload.html
+++ b/admin/src/main/resources/webapp/product-upload.html
@@ -38,7 +38,7 @@
         <div></div>
         <input id="introduction" placeholder="introduction">
         <div></div>
-        <input id="priority" placeholder="priority">
+        <input type="number" id="priority" placeholder="priority">
         <div></div>
         <input id="tag" placeholder="tag">
         <div></div>
