--- a/admin/src/main/resources/webapp/dashboard.html
+++ b/admin/src/main/resources/webapp/dashboard.html
@@ -77,7 +77,10 @@
             <div></div>
 
             <h2 id="sectionTitle"></h2>
-            <div class="table-responsive">
+            <div class="table-responsive">排序
+                <button>信箱</button>
+                <button>訂單時間</button>
+                <button>價格</button>
                 <table class="table table-striped">
                     <thead>
                     <tr>
