--- a/admin/src/main/resources/webapp/dashboard.html
+++ b/admin/src/main/resources/webapp/dashboard.html
@@ -75,13 +75,13 @@
         <div class="table-responsive">
             <table class="table">
                 <thead><tr>
+                    <th>No.</th>
                     <th>訂單序號
                         <!--<button onclick="sortTableByOrderDateTimeDS()">高</button>-->
                         <!--<button onclick="sortTableByOrderDateTimeAS()">低</button></th>-->
                     <th>項目</th>
-                    <th>總額
-                        <button onclick="sortTableByPriceDS()">高</button>
-                        <button onclick="sortTableByPriceAS()">低</button></th>
+                    <th >
+                        <span onclick="sortTableByPriceDS()">⬆️</span> 總額<span onclick="sortTableByPriceDS()">⬇️</span></th>
                     <th>購買人</th>
                     <th>購買人電話</th>
                     <th>收件人</th>
